# InvestIQ-v1

./: .gitignore  Brouillon StaticStopLossFilter.md  LICENSE  README.md  pyproject.toml  requirements.txt
.obsidian/: appearance.json  workspace.json
Backtest Logs/: MNQ_2026-01-20_11h52.xlsx
docs/: Création d'un FeatureStore.md  Implémentation pipeline SMA.md
experiments/: builder.py  mnq_ma_cross.py
src/: Main.py  cli.py  filtered_signals.xlsx  mypy.ini  raw_signals.xlsx
src/GUI/: app.py
src/Invest_IQ.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/backtest_engine/: bootstrap.py  engine.py  factory.py  orchestrator.py
src/backtest_engine/bootstraps/: baxktest_engine_bootstrap.py  common.py
src/backtest_engine/common/: contracts.py  enums.py  numeric.py  types.py
src/backtest_engine/portfolio/: portfolio.py  protocol.py
src/backtest_engine/transition_engine/: engine.py
src/config/: AppSettings.py  backtest.py
src/engine/backtest_engine/: engine.py  factory.py  orchestrator.py
src/engine/export_engine/: bootstrap.py  (+2 more)
src/experiments/: mnq_ma_cross.py
src/export_engine/: README.md  bootstrap.py  factory.py
src/gui/: app.py
src/historical_data_engine/: Errors.py  HistoricalDataEngine.py  HistoricalDataLoader.py  HistoricalRequestBuilder.py
src/invest_iq/: cli.py
src/investiq_app/: cli.py
src/settings/: loader.py  types.py
src/strategy_engine/: AbstractStrategy.py  MovingAverageCrossStrategy.py  contracts.py  enums.py  strategy_orchestrator.py
src/utilities/: import_tools.py  timestamps.py
(+510 files in other folders)
