[project]
name = "Invest-IQ"
version = "2026.02.05"
requires-python=">=3.13"
dependencies=[
    "colorama==0.4.6",
    "colorlog==6.10.1",
    "et_xmlfile==2.0.0",
    "eventkit==1.0.3",
    "ib-insync==0.9.86",
    "nest-asyncio==1.6.0",
    "numpy==2.3.4",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.2",
    "xlsxwriter==3.2.9",
]

[project.scripts]
invest-iq-backtest = "investiq_app.cli:main"